figue/tests/integration/snapshots/main__integration__help__nested_intermediate_repo_help.snap
---
source: figue/tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
main repo

Manage repositories

USAGE:
    main repo [OPTIONS] <COMMAND>

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    clone
            Clone a repository
    push
            Push changes
