figue/tests/integration/snapshots/main__integration__help__nested_subcommand_clone_help.snap
---
source: figue/tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
main repo clone

Clone a repository

USAGE:
    main repo clone [OPTIONS] <URL>

ARGUMENTS:
        <URL>
            Repository URL

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
        --depth <U32>
            Clone depth (shallow clone)
    -b, --branch <STRING>
            Branch to clone
