figue/tests/integration/snapshots/main__integration__help__nested_subcommand_push_help.snap
---
source: figue/tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
main repo push

Push changes

USAGE:
    main repo push [OPTIONS] [REMOTE]

ARGUMENTS:
        <REMOTE>
            Remote name

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -f, --[no-]force
            Force push
