figue/tests/integration/snapshots/main__integration__help__subcommand_list_help.snap
---
source: figue/tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
main ls

List installed packages

USAGE:
    main ls [OPTIONS]

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -a, --[no-]all
            Show all versions
        --[no-]json
            Output as JSON
