figue/tests/integration/snapshots/main__integration__help__subcommand_remove_help.snap
---
source: figue/tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
main rm

Remove a package

USAGE:
    main rm [OPTIONS] <PACKAGE>

ARGUMENTS:
        <PACKAGE>
            Package name to remove

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -y, --[no-]yes
            Don't ask for confirmation
